--- a/bpmnlint-runner/package.json
+++ b/bpmnlint-runner/package.json
@@ -17,12 +17,14 @@
     "lint:fix": "eslint . --fix"
   },
   "dependencies": {
+    "@bp3global/bpmnlint-plugin-bpmn-rules": "*",
     "bp3-dynamic-rules": "file:bp3-dynamic-rules",
-    "bpmn-moddle": "^9.0.3",
-    "bpmnlint": "^11.6.0",
+    "bpmn-moddle": "*",
+    "bpmnlint": "*",
     "bpmnlint-plugin-bp3-dynamic-rules": "file:bp3-dynamic-rules",
     "bpmnlint-plugin-bp3global-bpmn-rules": "npm:@bp3global/bpmnlint-plugin-bpmn-rules",
-    "bpmnlint-utils": "^1.1.1",
+    "bpmnlint-plugin-camunda-compat": "*",
+    "bpmnlint-utils": "*",
     "chalk": "^4.1.2",
     "cli-table3": "^0.6.5",
     "junit-report-builder": "^5.1.1",
